--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "notarealdb": "^0.2.2"
+    "morgan": "^1.9.1",
+    "notarealdb": "^0.2.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
