--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "thelemapi",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "description": "A sample API using Node.js best practices",
   "main": "server.js",
   "scripts": {
@@ -24,6 +27,7 @@
   },
   "homepage": "https://github.com/seb7887/thelemapi#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
@@ -32,6 +36,9 @@
     "helmet": "^3.15.1",
     "morgan": "^1.9.1",
     "notarealdb": "^0.2.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
