--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "helmet": "^3.15.1",
+    "jsonwebtoken": "^8.5.0",
     "morgan": "^1.9.1",
     "notarealdb": "^0.2.2",
     "passport": "^0.4.0",
