--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,9 @@
   "rules": {
     "node/no-deprecated-api": ["error", "always"],
     "node/prefer-global/console": ["error", "always"],
+    "node/no-unpublished-require": "off",
     "no-console": "off",
-    "dot-location": "error",
+    "dot-location": "off",
     "no-else-return": "error",
     "global-require": "error",
     "brace-style": "error",
