--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "node/no-deprecated-api": ["error", "always"],
     "node/prefer-global/console": ["error", "always"],
     "no-console": "off",
-    "dot-location": "error",
+    "dot-location": "off",
     "no-else-return": "error",
     "global-require": "error",
     "brace-style": "error",
