--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "is-ci \"test:coverage\" \"test:watch\"",
     "format": "prettier \"**/*.+(js|json|less|css|ts|tsx|md)\" --write",
     "check-updates": "ncu",
-    "update": "ncu -u"
+    "update": "ncu -u",
+    "testing": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,6 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "faker": "^4.1.0",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.0",
     "morgan": "^1.9.1",
@@ -47,6 +47,7 @@
     "eslint": "^5.15.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-security": "^1.4.0",
+    "faker": "^4.1.0",
     "is-ci-cli": "^1.1.1",
     "jest": "^24.3.1",
     "jest-watch-typeahead": "^0.2.1",
