--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-brute": "^1.0.1",
     "express-validator": "^5.3.1",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.0",
